force-app/main/default/objects/Delivery_Item__c/Delivery_Item__c.object-meta.xml
<CustomObject>
    <label>Delivery Item</label>
    <nameField>
        <displayFormat>FBDI-{00000000}</displayFormat>
        <label>Delivery Item名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>