force-app/main/default/objects/Delivery_Item__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery</label>
    <referenceTo>Delivery__c</referenceTo>
    <relationshipLabel>Delivery Item</relationshipLabel>
    <relationshipName>Delivery_Item</relationshipName>
    <type>Lookup</type>
</CustomField>